--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "mdos": "./src/cli.js"
   },
   "dependencies": {
-    "gray-matter": "^4.0.3",
-    "marked": "^12.0.0",
-    "liquidjs": "^10.10.0",
     "chokidar": "^3.6.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "gray-matter": "^4.0.3",
+    "liquidjs": "^10.10.0",
+    "marked": "^12.0.0",
+    "tailwindcss": "^4.1.18"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node src/cli.js"
   }
