Add performance and UX improvements (v0.3.0)
Performance:
- Cache TTL support (30s, 5m, 1h, 2d format)
- Lazy widget loading with conditional rendering
- Preload on hover for faster navigation
- Cache invalidation on write actions

Developer Experience:
- Hot reload with WebSocket in dev mode
- Better error messages with stack traces
- Dev mode: 'mdos dev file.md'
- Improved logging and debugging

Markdown Enhancements:
- Auto-style checkboxes: [ ], [x], [!]
- Inline metadata parsing (2h ago)
- List actions auto-styled as cards
- Wiki links: [[page]] or [[page|text]]

Multi-Account:
- Config file support via --config flag
- Switch between work/personal profiles
- Example configs included

Architecture:
- New cache.js for TTL-based caching
- New enhancer.js for markdown preprocessing
- Updated renderer with WebSocket support
- Updated CLI with dev mode and config options

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mdos",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "type": "module",
   "description": "Markdown Operating System - declarative UIs from markdown with CLI tools",
   "bin": {
@@ -12,7 +12,8 @@
     "gray-matter": "^4.0.3",
     "liquidjs": "^10.10.0",
     "marked": "^12.0.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "ws": "^8.18.3"
   },
   "scripts": {
     "start": "bun src/cli.js"
